helm/apps/immich/deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - name: redis
          image: valkey/valkey:9
          ports:
            - containerPort: 6379
