helm/apps/immich/deployment-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v2.6.3
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: photos
              mountPath: /data
      volumes:
        - name: photos
          persistentVolumeClaim:
            claimName: immich-photos
